fix: icon message not centered

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -51,3 +51,7 @@ body {
 .ant-picker-footer-extra > div {
   flex-wrap: wrap !important;
 }
+
+.anticon svg {
+  margin-bottom: 5px !important;
+}
